# coffee-zone

./: .gitignore  .gitmodules  .prettierrc  README.md  bun.lockb  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
src/: schema.sql
src/backend/: __init__.py  comment.py  db.py  env.py  feed.py  hello.py  misc.py  models.py  post.py  reply.py  user.py
src/frontend/: api.ts  app.tsx  index.html  main.css  main.tsx  models.ts  session.ts
src/frontend/components/: author.tsx  avatar.tsx  comment.tsx  input.tsx  markup.tsx  post.tsx  reply.tsx  textarea.tsx  update-email.tsx  votes.tsx
src/frontend/features/: footer.tsx  header.tsx
src/frontend/hooks/: rate-limiter.ts
src/frontend/pages/: board.tsx  login.tsx  not-found.tsx  post.tsx  register.tsx  reset-password.tsx  root.tsx  settings.tsx  submit.tsx  user.tsx  verify-token.tsx  verify.tsx
src/frontend/signal-router/: example.tsx  link.tsx  location.ts  misc.ts  pathname.ts  route.ts  router.ts  title.tsx
