[project]
name = "backend"
version = "1.0.0"
description = "backend"
authors = [{ name = "aspizu", email = "aspizu@protonmail.com" }]
dependencies = ["reproca @ file:///home/aspizu/Projects/reproca"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["uvicorn>=0.30.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.rye.scripts]
dev = { cmd = "uvicorn src.backend:app --reload" }
